[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-vault-multicast"
version = "2.1.0"
description = "Multicast-based service discovery in local networks with integrated monitoring and metrics."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "psygnal>=0.10",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.5"]
dev = [
    "PyQt6>=6.5",
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.setuptools]
py-modules = ["vault_multicast", "vault_multicast_service_discovery"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PIE", "RUF"]
ignore = [
    "UP006", # non-pep585-annotation: keep typing.Dict/List for readability
    "UP035", # deprecated-import: same as above
    "UP045", # non-pep604-annotation-optional: keep Optional[...] for readability
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
